--- a/grade.css
+++ b/grade.css
@@ -1,7 +1,12 @@
 body{
-    background-color: #0A1828;
-    color: #BFA181;
-    font-family :Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    height: 100vh;
+    background: linear-gradient(#E3867D 50vh, #CEE6F2 50vh); 
+    font-family :system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    padding: 4rem;
 }
 .nav-bar{
     font-size: 40px;
@@ -14,32 +19,44 @@ body{
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    height: fit-content;
+    padding: 20px;
 }
 .content {
     display: flex;
     flex-direction: row;
     margin: 100px;
     font-size: 20px;
-    border: 2px solid turquoise;
     border-radius: 10px;
-    height: 370px;
-    background-color: #0A1824;
-    box-shadow: black 0.4rem 0.5rem 0.5rem 0.25rem;
+    height: 400px;
+    background-color: #962E2A;
+    box-shadow: 0.8rem 0.8rem 0.5rem rgba(0,0,0,0.3);
+    color: #e3f2f9 ;
 }
 input{
-    padding : 2px;
+    padding : 5px;
     background-color: lightblue;
     border-radius: 5px;
+    border: none;
+    height: 1.2rem;
+    box-shadow: 0.1rem 0.1rem 0.8rem rgba(0,0,0,0.5);
+   
+}
+input ::placeholder{
+    color: black;
 }
 button{
     padding : 8px;
     background-color: lightblue;
     border-radius: 10px;
-    font-family:Verdana, Geneva, Tahoma, sans-serif
+    font-family:Verdana, Geneva, Tahoma, sans-serif;
+    border: 0;
+    box-shadow: 0.1rem 0.1rem 0.8rem rgba(0,0,0,0.5);
+
 }
 .button{
     color : #BFA181;
-    transition: 0.25s;
+    transition: 0.5s;
     border-radius: 5px;
 }
 .button:hover{
@@ -58,7 +75,7 @@ button{
     padding: 0.62rem;
 }
 .grid-item1{
-    padding: 0.69rem;
+    padding: 0.82rem;
 }
 .grid-item2{
     padding: 0.62rem;
@@ -73,6 +90,9 @@ button{
 .display{
     margin-top: 2rem;
     font-size: 30px;
+    box-shadow: 0.1rem 0.1rem 0.8rem rgba(0,0,0,0.5);
+    background-color: #E3867D;
+    color: rgb(43, 42, 42);
 }
 .enter{
     margin-top: 3rem;
